Updated dms.css for page banner images

--- a/dms.css
+++ b/dms.css
@@ -561,7 +561,7 @@ div#medicalCourierTest {
   margin-top: 2rem;
 }
 div#companyTest {
-  background-image: url(images/042314ourcompany.jpg);
+  background-image: url(images/051115ourCompany.jpg);
   background-position: center;
   background-repeat: no-repeat;
   position: relative;
